# unbounded_integer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: motivation_example.cpp
src/: unbounded_integer.h
src/details/: utils.h
test/: CMakeLists.txt  init_test.cpp  sum_test.cpp
